--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,6 +34,12 @@
     </div>
 </div>
 
+<footer class="footer">
+    <div class="container">
+      <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/Kprov/friend-finder">GitHub Repo</a></p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
